# hal-ecosystem

./: .gitignore  HAL_ecosystem.code-workspace  README.md
HAL/: Cargo.toml  HAL_APPLICATION_INTEGRATION_PROMPT.md  README.md
HAL/HALcore/: Cargo.toml
HAL/HALcore/src/: main.rs
HAL/examples/: config.toml  http_client.rs
HAL/src/: config.rs  halcore.rs  http.rs  http_auth.rs  http_models.rs  http_stream.rs  lib.rs  logging.rs  main.rs  progress.rs  protocol.rs  registry.rs  router.rs  session.rs  telegram.rs  telemetry.rs  tool_manager.rs  tool_registry.rs  transport.rs
HAL/tests/: exhaustive_tests.rs
healthchecker/: Cargo.toml  README.md  config.example.toml
healthchecker/src/: config.rs  healthcheck.rs  logging.rs  logs.rs  main.rs  openai.rs  protocol.rs  system.rs
jira-news/: Cargo.toml  README.md  jira-news_prompt.md
jira-news/src/: config.rs  gemini.rs  jira.rs  lib.rs  logging.rs  main.rs  models.rs  protocol.rs
jira-news/tests/: integration_tests.rs
mm-news/: Cargo.toml  README.md  mm-news_prompt.md
mm-news/src/: config.rs  gemini.rs  lib.rs  logging.rs  main.rs  mattermost.rs  models.rs
mm-news/tests/: integration_tests.rs
wingfoil-copilot/: Cargo.toml  HAL_INTEGRATION.md  README.md  config.example.toml
wingfoil-copilot/src/: config.rs  correction.rs  holfuy.rs  logging.rs  main.rs  meteoblue.rs  meteoconsult.rs  models.rs  ocr.rs  openai.rs  protocol.rs  wingfoil.rs
wingfoil-copilot/tests/: hal_compliance.rs
