[package]
name = "wingfoil-copilot"
version = "0.1.1"
edition = "2021"
description = "Wingfoil recommendation bot based on Holfuy and MeteoConsult"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "local-time"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
headless_chrome = { version = "1.0", features = ["rustls"] }
regex = "1.10"
rusty-tesseract = "1.1"
dirs = "5.0"
